--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,121 @@
+# NewsGap 项目 .gitignore
+
+# ============================================================================
+# 进程管理
+# ============================================================================
+.backend.pid
+.frontend.pid
+
+# ============================================================================
+# 日志文件
+# ============================================================================
+logs/
+*.log
+gemini_response.log
+backend/gemini_response.log
+
+# ============================================================================
+# 数据库
+# ============================================================================
+backend/data/*.db
+backend/data/*.db-journal
+backend/data/*.db.backup.*
+
+# ============================================================================
+# 配置文件（包含敏感信息）
+# ============================================================================
+backend/config/api_keys.json
+backend/.env
+.env
+.env.local
+
+# ============================================================================
 # Python
-__pycache__/
+# ============================================================================
+backend/venv/
+backend/__pycache__/
+backend/**/__pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-venv/
-env/
-ENV/
-.venv
-
-# Node
-node_modules/
-dist/
 build/
-.npm
-*.log
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# IDEs
+# ============================================================================
+# Node.js / Frontend
+# ============================================================================
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/.env
+frontend/.env.local
+frontend/.env.production
+
+# ============================================================================
+# 编辑器 / IDE
+# ============================================================================
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
-
-# OS
 .DS_Store
-Thumbs.db
 
-# Environment
-.env
-.env.local
-.env.rsshub
-
-# Database
-*.db
-*.db-journal
-*.sqlite
-*.sqlite3
-data/
-
-# Archives
-archives/
-
-# Logs
-logs/
-*.log
-
-# Temporary
-tmp/
-temp/
-.cache/
-
-# Build outputs
-frontend/dist/
-backend/dist/
-*.egg-info/
-
-# Test coverage
+# ============================================================================
+# 测试和覆盖率
+# ============================================================================
+.pytest_cache/
 .coverage
 htmlcov/
-.pytest_cache/
+.tox/
+
+# ============================================================================
+# 归档文件
+# ============================================================================
+backend/archives/*.md
+backend/archives/**/*.md
+
+# ============================================================================
+# 临时文件
+# ============================================================================
+*.tmp
+*.temp
+*.bak
+tmp/
+temp/
+
+# ============================================================================
+# 文档生成
+# ============================================================================
+site/
+docs/_build/
+
+# ============================================================================
+# 操作系统
+# ============================================================================
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# ============================================================================
+# 保留的文件（强制跟踪）
+# ============================================================================
+!backend/data/.gitkeep
+!backend/config/.gitkeep
+!backend/archives/.gitkeep
+!logs/.gitkeep
