--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+  # RSSHub 服务
   rsshub:
     image: diygod/rsshub:latest
     container_name: newsgap-rsshub
@@ -10,14 +11,20 @@ services:
     environment:
       NODE_ENV: production
       CACHE_TYPE: memory
-      # CACHE_TYPE: redis
-      # REDIS_URL: 'redis://redis:6379/'
-      PUPPETEER_WS_ENDPOINT: ''  # 如果需要浏览器渲染
-    # depends_on:
-    #   - redis
+      # 可选：配置代理
+      # PROXY_URI: http://proxy.example.com:1080
+      # 可选：配置缓存
+      # REDIS_URL: redis://redis:6379/
     networks:
       - newsgap-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:1200/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
+  # 可选：Redis 缓存服务
   # redis:
   #   image: redis:alpine
   #   container_name: newsgap-redis
