--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,14 @@ backend/gemini_response.log
 backend/data/*.db
 backend/data/*.db-journal
 backend/data/*.db.backup.*
+data/*.db
+data/*.db-journal
+data/*.db-shm
+data/*.db-wal
+*.db
+*.db-journal
+*.db-shm
+*.db-wal
 
 # ============================================================================
 # 配置文件（包含敏感信息）
@@ -119,3 +127,4 @@ Desktop.ini
 !backend/config/.gitkeep
 !backend/archives/.gitkeep
 !logs/.gitkeep
+!data/.gitkeep
