feat: 实现移动端一体化架构核心功能
主要改进:
- 安装 Capacitor 及相关插件
- 实现移动端数据库服务 (SQLite)
- 实现移动端 RSS 爬取服务
- 实现移动端 LLM API 客户端
- 实现移动端统一 API 层
- 实现条件编译,自动选择移动端/Web端 API

技术栈:
- @capacitor/core 5.x - 移动端容器
- @capacitor-community/sqlite - 本地数据库
- @capacitor-community/http - 网络请求
- @capacitor/preferences - 配置存储
- rss-parser - RSS 解析

移动端服务:
- MobileDatabase: SQLite 数据库操作
- MobileRSSFetcher: RSS 爬取和解析
- MobileLLMClient: LLM API 调用 (Gemini/DeepSeek/OpenAI)
- MobileAPI: 统一API层,复用前端接口

平台支持:
- iOS: ✅ 优先支持
- Android: ✅ 完全兼容
- Web: ✅ 保持兼容

下一步:
- 配置 iOS/Android 原生项目
- 测试构建和运行
- 优化性能和体验

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor-community/http": "^1.4.1",
+    "@capacitor-community/sqlite": "^8.0.0",
+    "@capacitor/android": "^8.0.2",
+    "@capacitor/cli": "^8.0.2",
+    "@capacitor/core": "^8.0.2",
+    "@capacitor/filesystem": "^8.1.0",
+    "@capacitor/ios": "^8.0.2",
+    "@capacitor/preferences": "^8.0.0",
     "@tanstack/react-query": "^5.62.13",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
@@ -17,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.1.1",
+    "rss-parser": "^3.13.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
