chore: 更新 .gitignore，忽略移动端文件和编译产物
添加忽略规则:
- frontend/android/ 和 frontend/ios/ (Capacitor 原生项目)
- frontend/src/**/*.js (TypeScript 编译产物)
- frontend/capacitor.config.ts (移动端配置)

说明:
- 这些文件仅在 mobile-app 分支需要跟踪
- 在 master 分支应该被忽略
- 避免分支切换时文件残留

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,15 @@ frontend/.env
 frontend/.env.local
 frontend/.env.production
 
+# TypeScript 编译产物（.js 文件）
+frontend/src/**/*.js
+frontend/src/**/*.jsx
+
+# Capacitor 原生项目（仅在 mobile-app 分支跟踪）
+frontend/android/
+frontend/ios/
+frontend/capacitor.config.ts
+
 # ============================================================================
 # 编辑器 / IDE
 # ============================================================================
