feat: 完成桌面端独立部署改造
🎉 核心功能完成:
- ✅ Python后端独立打包 (PyInstaller, 46MB)
- ✅ Tauri桌面应用框架 (Rust + React)
- ✅ 进程管理和数据目录管理
- ✅ Release版本构建成功 (6.1MB主程序)
- ✅ 完整的自动化构建脚本

📦 构建产物:
- Tauri主程序: 6.1MB
- Python后端: 46MB
- 总体积: ~52MB (远小于预期)

📋 新增文件:
- src-tauri/ - Tauri桌面应用框架
- backend/newsgap-backend.spec - PyInstaller配置
- backend/build-backend.sh - 后端打包脚本
- build-desktop.sh - 完整构建脚本
- BUILD_SUCCESS.md - 构建成功报告
- QUICK_START.md - 快速开始指南
- MIGRATION_PROGRESS.md - 改造进度记录

🔧 技术栈:
- Rust 1.93.0
- Tauri 1.8.3
- PyInstaller (单文件打包)
- React + Vite

⚠️ 待完成:
- DMG安装包生成 (需要tauri-cli 1.x)
- 应用图标生成
- Windows/Linux跨平台打包

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,17 @@ Desktop.ini
 !backend/archives/.gitkeep
 !logs/.gitkeep
 !data/.gitkeep
+
+# Tauri build outputs
+src-tauri/target/
+src-tauri/Cargo.lock
+
+# Backend build outputs
+backend/build/
+backend/dist/
+
+# RSSHub source (clone separately)
+rsshub-source/
+
+# Rust backup config
+*.bak
